[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Entities/BaseBody.gd" type="Script" id=2]
[ext_resource path="res://src/Entities/Character/Body/LOS/LOSTrackers.gd" type="Script" id=3]
[ext_resource path="res://src/Entities/Character/Body/Unit.gd" type="Script" id=4]
[ext_resource path="res://src/Entities/Character/Body/DirTracker.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=1]
bake_interval = 1.0
_data = {
"points": PoolVector2Array(  )
}

[node name="Unit" type="Node"]
script = ExtResource( 4 )

[node name="PathFinder" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LOSTrackers" type="Node2D" parent="PathFinder"]
script = ExtResource( 3 )

[node name="PathFollower" type="PathFollow2D" parent="PathFinder"]
rotate = false
loop = false
lookahead = 100.0
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" type="RigidBody2D" parent="PathFinder/PathFollower"]
position = Vector2( 1, 0 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
mode = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="PathFinder/PathFollower/KinematicBody2D"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathFinder/PathFollower/KinematicBody2D"]

[node name="DirTracker" type="RayCast2D" parent="PathFinder/PathFollower/KinematicBody2D"]
position = Vector2( -2, 0 )
scale = Vector2( 2, 2 )
enabled = true
cast_to = Vector2( 24, 0 )
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]
